[gd_scene load_steps=6 format=3 uid="uid://vs3y1ykexpc4"]

[ext_resource type="Script" path="res://scripts/modal_shop.gd" id="1_taxvr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pwb2e"]
bg_color = Color(0.82606, 0.82606, 0.82606, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dk1ek"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lmr36"]
bg_color = Color(0.556953, 0.556953, 0.556953, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bbdvl"]

[node name="ModalShop" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_taxvr")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(900, 550)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_pwb2e")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="BoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_dk1ek")
text = "SHOP"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "X"

[node name="Section" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="BuySectionButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Section"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "BUY"

[node name="SellSectionButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Section"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_lmr36")
text = "SELL"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bbdvl")
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="ListCardShop" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 10
columns = 7

[node name="ListCardUser" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 10
columns = 7

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Section/BuySectionButton" to="." method="_on_buy_section_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Section/SellSectionButton" to="." method="_on_sell_section_button_pressed"]
